# trader-deprecated-1

./: Cargo.toml  README.md  queries.psql
api/examples/: endpoints.rs
api/src/client/: account.rs
api/src/model/: mod.rs
fetcher/: Cargo.toml
fetcher/src/: main.rs
misc/: queries.psql
server/: Cargo.toml
server/public/: index.html  script.js  style.css
server/src/: main.rs
src/: main.rs
src/economy/: asset.rs  market.rs  mod.rs
src/environments/: historical.rs  mod.rs
src/indicators/: ema.rs  macd.rs  macd_histogram.rs  mod.rs  value.rs
src/traders/: mod.rs
trader/: Cargo.toml
trader/src/: main.rs
trader/src/economy/: asset.rs  market.rs  mod.rs  symbols.rs
trader/src/economy/filters/: mod.rs  price_filter.rs
trader/src/environments/: historical.rs  mod.rs  simulated.rs
trader/src/indicators/: ema.rs  macd.rs  macd_histogram.rs  mod.rs  rsi.rs  sma.rs  smma.rs  stretched_rsi.rs  value.rs
trader/src/traders/: and.rs  backoff.rs  full_stop.rs  gobble_bad_longterm.rs  macd_trader.rs  mod.rs  rsi_trader.rs  safe_and.rs  stop_loss.rs
