[package]
name = "trader"
version = "0.1.0"
authors = ["fabianboesiger <boesiger.fabian@outlook.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1"
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "chrono", "bigdecimal" ] }
websocket = "0.24"
dotenv = "0.15"
bigdecimal = "0.1"
chrono = { version = "0.4", features = ["serde"] }
binance_api = { path = "../binance-api" }