[package]
name = "fetcher"
version = "0.1.0"
authors = ["fabianboesiger <boesiger.fabian@outlook.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
sqlx = { version = "0.3", default-features = false, features = ["runtime-tokio", "macros", "postgres", "chrono", "bigdecimal"] }
dotenv = "0.15"
binance-async = { path = "../api" }