[package]
name = "server"
version = "0.1.0"
authors = ["fabianboesiger <boesiger.fabian@outlook.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
sqlx = { version = "0.3", default-features = false, features = ["runtime-tokio", "macros", "postgres", "chrono", "bigdecimal"] }
dotenv = "0.15"
warp = "0.2"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"