[package]
name = "trader"
version = "0.1.0"
authors = ["fabianboesiger <boesiger.fabian@outlook.com>"]
edition = "2018"
default-run = "trader"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1"
sqlx = { version = "0.3", default-features = false, features = ["runtime-tokio", "macros", "postgres", "chrono", "bigdecimal"] }
dotenv = "0.15"
binance-async = { git = "https://github.com/fabianboesiger/binance-async-rs" }